--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "moment": "~2.10.3",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "hint.css": "~1.3.4"
   }
 }
